# tree-sitter-bass

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  binding.gyp  go.mod  go.sum  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/: bass.h
corpus/: cons.txt  keywords.txt  kwdpaths.txt  lists.txt  meta.txt  scalars.txt  scopes.txt  subpaths.txt
queries/: highlights.scm  highlights.scm.hx  highlights.scm.nvim  highlights.scm.tmpl
queries/helix/: highlights.scm  highlights.scm.tmpl
queries/nvim/: highlights.scm  highlights.scm.tmpl
src/: grammar.json  node-types.json  parser.c
test/corpus/: kwdpaths.txt  lists.txt  paths.txt  scalars.txt  subpaths.txt
test/highlight/: bass.bass
