[package]
name = "tree-sitter-bass"
description = "Bass grammar for the tree-sitter parsing library"
version = "0.0.1"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "bass"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/vito/tree-sitter-bass"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
